=============


2.39.3 - June ??, 2010

    Updated the Logtalk compiler in order to preprocess proprietary Prolog
    directives (using any defined config file hooks) after term-expansion
    but before trying to compile the directives as Logtalk directives. This
    change allows for simpler and more robust handling of Prolog proprietary
    directives, specially module directives.

    Corrected the definitions of the predicates '$lgt_current_date'/3 and
    '$lgt_current_time'/3 in the Qu-Prolog config file and rename it to
    "qp.pl". Updated the minimum required version to 8.12 and changed the
    value of the Logtalk flag "prolog_dialect" from "qu" to "qp" in order
    to match the value of the new Prolog flag "dialect" implemented in
    Qu-Prolog 8.12.


2.39.2 - May 4, 2010

    Changed the internal representation of most entity properties to use a
    more compact bit representation, stored in the tables of loaded entities.

    Changed the internal representation of non-critical predicate properties
    to use a more compact bit representation, which includes the "multifile"
    predicate property, stored in the tables of entity declared predicates.

    Changed the type of the built-in methods (\+)/1, call/N, once/1, catch/3,
    throw/1, bagof/3, findall/3, forall/2, setof/3, self/1, sender/1, this/1
    and parameter/2 from local predicates to private predicates. Corrected a
    bug in the predicate_property/2 built-in method where some of those built-
    in methods would be reported as public. These changes should only require
    updating any application code that explicitly expected the exception term
    permission_error(access, local_predicate, Pred), which have been changed
    to permission_error(access, private_predicate, Pred).

    Added support for parsing operator declarations in the uses/2, public/1,
    protected/1, and private/1 directives.

    Updated the Logtalk compiler in order to avoid generating unnecessary (but